--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,18 +1,18 @@
 
 steps:
-  - name: ":aws: elastic-builders"
+  - name: ":cloudformation: :chart_with_upwards_trend: elastic-builders"
     agents:
       queue: elastic-builders
     command: ./update-stack.sh elastic-builders
 
   - wait
-  - name: ":aws: elastic-pipeline-uploaders"
+  - name: ":cloudformation: :building_construction: elastic-pipeline-uploaders"
     agents:
       queue: elastic-builders
     command: ./update-stack.sh elastic-pipeline-uploaders
 
   - wait
-  - name: ":aws: elastic-runners-new"
+  - name: ":cloudformation: :runner: elastic-runners-new"
     agents:
       queue: elastic-builders
     command: ./update-stack.sh elastic-runners-new
