Check if updates are needed

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,18 +4,18 @@ steps:
     agents:
       queue: elastic-builders
     command: ./update-stack.sh elastic-builders
-    artifact_paths: "output.txt"
+    artifact_paths: "output.json"
 
   - wait
   - name: ":cloudformation: :chart_with_upwards_trend: elastic-pipeline-uploaders"
     agents:
       queue: elastic-builders
     command: ./update-stack.sh elastic-pipeline-uploaders
-    artifact_paths: "output.txt"
+    artifact_paths: "output.json"
 
   - wait
   - name: ":cloudformation: :runner: elastic-runners-new"
     agents:
       queue: elastic-builders
     command: ./update-stack.sh elastic-runners-new
-    artifact_paths: "output.txt"
+    artifact_paths: "output.json"
