--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,9 +1,9 @@
 
 steps:
-  - name: ":cloudformation: :runner: elastic-runners-new"
+  - name: ":cloudformation: :runner: elastic-runners"
     agents:
       queue: elastic-builders
-    command: ./update-stack.sh elastic-runners-new
+    command: ./update-stack.sh elastic-runners
     artifact_paths: "output.json"
     concurrency: 1
     concurrency_group: "elastic-stack-update"
@@ -11,7 +11,7 @@ steps:
   - wait
   - name: ":cloudformation: :building_construction: elastic-builders"
     agents:
-      stack: elastic-runners-new
+      stack: elastic-runners
     command: ./update-stack.sh elastic-builders
     artifact_paths: "output.json"
     concurrency: 1
